--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>LIST APP</title>
+    <title>ポイントUP勤怠</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/send_url.js"></script>
   </head>
