--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="header-nav">
-      <a href="/">Time Management</a>
+      <a href="/"><img class="logo-image" src="/images/Logo_200_50_White.png" alt="ポイントUP勤怠ロゴ"></a>
       <p>ようこそ、<%= locals.userName %>さん</p>
       <ul>
         <% if(locals.isLoggedIn) {%>
