--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BLOG</title>
+    <title>ポイントUP勤怠</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/send_url.js"></script>
   </head>
@@ -10,7 +10,6 @@
     <%- include('header'); %>
     <div class="sign">
       <div class="container">
-        <h1><a href="/list">BLOG</a></h1>
         <div class="panel">
           <h2>ログイン</h2>
           <form action="/login" method="post">
