--- a/views/top-manager.ejs
+++ b/views/top-manager.ejs
@@ -12,14 +12,14 @@
       <div class="max-width">
         <div class="two-culumns">
           <a href="/signup" class="two-culmn">
-            <p class="main-button">ユーザー登録</p>
+            <p class="main-button">従業員登録</p>
+            <p class="btn-des">新しい従業員を追加することができます。</p>
           </a>
           <a href="/user-list" class="two-culmn">
-            <p class="main-button">ユーザー一覧</p>
+            <p class="main-button">従業員一覧</p>
+            <p class="btn-des">現在登録済みの従業員一覧を見ることができます。</p>
           </a>
         </div>
-        
-        
       </div>
     </div>
   </body>
