--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: Lato, "Hiragino Maru Gothic Pro", "Meiryo UI", Meiryo, "MS PGothic", sans-serif;
+  background-color: #fef7f0;
 }
 
 img {
@@ -73,9 +74,14 @@ a {
   flex-direction: row;
   align-items: flex-start;
   padding: 10px;
-  gap: 10px;
+  gap: 20px;
   width: 100%;
   height: 200px;
+}
+
+.two-culumns.vertical{
+  flex-direction: column;
+  height: auto;
 }
 
 .two-culmn{
@@ -85,24 +91,37 @@ a {
   align-items: center;
   padding: 0px 10px;
   gap: 20px;
-
   width: 100%;
   height: 100%;
   background: #FFFFFF;
-  border: 2.5px solid #4CCFC9;
+  border: 3px solid #212121;
   border-radius: 10px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s; /* Chrome、Safari用 */
+  -moz-transition: 0.3s; /* Firefox用 */
+  -o-transition: 0.3s; /* Opera用 */
+}
+
+.two-culmn:hover{
+  box-shadow:  1px 1px 12px rgba(0,0,0,.50);
 }
 
 .main-button{
-  color: #4CCFC9;
+  color: #F4810E;
+  font-size: 21px;
+  font-weight: bold;
+}
 
+.btn-des{
+  font-size: 12px;
+  color:#212121;
 }
 
 .sub-button{
   font-size: 18px;
   font-weight: bold;
   color: #ffffff;
-  background-color: #4CCFC9;
+  background-color: #F4810E;
   height: 54px;
   border-radius: 27px;
   width: 60%;
@@ -112,102 +131,46 @@ a {
   align-items: center;
 }
 
-.article-forms {
-  position: relative;
-  padding: 50px 0 0;
+/* tableデザイン */
+table{
+  max-width:1200px;
+  width:100%;
+  border-spacing: 0px;
+  background-color: #fff;
+  border-radius: 20px;
 }
 
-.article-forms > i {
-  position: absolute;
-  top: -45px;
-  right: 0;
-  font-style: normal;
-  font-weight: bold;
-  display: inline-flex;
-  align-items: center;
-  border-width: 2px;
-  border-style: solid;
-  color: #9eb0b9;
-  border-color: #E1E9F1;
-  height: 40px;
-  padding: 0 20px;
-  border-radius: 6px;
-  letter-spacing: 0.05em;
+table th{
+  background-color: #F4810E;
+  padding-top: 8px;
+  padding-bottom:8px;
+  color: #fff;
 }
 
-.article-forms > i.limited {
-  color: #FF708F;
-  border-color: #FF708F;
+table td{
+  padding: 8px 8px 8px 8px;
 }
 
-.article {
-  padding: 20px 0 0;
+table tr:nth-child(even){
+  background-color: #eee
 }
 
-.article > h1 {
-  font-size: 30px;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  line-height: 1.5;
-  margin-bottom: 60px;
-}
-
-.article > p {
-  font-size: 16px;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  line-height: 2.2;
-}
-
-.article > i {
-  display: inline-flex;
-  align-items: center;
-  background-color: #FF708F;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 4px 20px;
-  font-style: normal;
-  margin-bottom: 24px;
-  margin-top: 0px;
-}
-
-.article-login {
+.tbl-id{
   text-align: center;
-  background-color: #F6FAFF;
-  border-radius: 10px;
-  padding: 60px 40px 50px;
+  text-align: center;
 }
 
-.article-login p:nth-child(1) {
-  font-weight: bold;
-  font-size: 26px;
+a.detail-btn{
+  color: #F4810E;
 }
 
-.article-login p:nth-child(2) {
-  font-size: 18px;
-  margin-top: 30px;
-  line-height: 1.8;
+a.detail-btn:hover{
+  color: #DC750F;
+  text-decoration:underline;
 }
 
-.article-login img {
-  margin: 30px auto 30px;
-}
-
-.article-login a + p {
-  margin-top: 36px;
-  font-weight: bold;
-  font-size: 14px;
-}
-
-.article-login a + p > a {
-  display: inline-block;
-  margin-left: 20px;
-  color: #4CCFC9;
-}
-
-.article-login a + p > a:hover {
-  color: #2DC2BC;
+.a-center{
+  text-align: center;
 }
 
 .btn {
@@ -232,6 +195,11 @@ a {
 
 .btn.sub:hover {
   background-color: #A9B9D2;
+}
+
+.noti-text{
+  font-size: 12px;
+  text-align: center;
 }
 
 .btn-confirm {
@@ -343,7 +311,7 @@ form > a {
   width: 50%;
   text-align: center;
   margin: 10px auto 0;
-  color: #A4B5C8;
+  color: #212121;
   font-weight: bold;
   padding: 15px 0;
 }
@@ -396,18 +364,23 @@ input[type="submit"] {
   font-size: 18px;
   font-weight: bold;
   color: #ffffff;
-  background-color: #4CCFC9;
+  background-color: #F4810E;
   height: 54px;
   padding: 0 90px;
   border-radius: 27px;
   width: 60%;
   display: block;
   margin: 80px auto 0;
+  transition: 0.3s;
+  -webkit-transition: 0.3s; /* Chrome、Safari用 */
+  -moz-transition: 0.3s; /* Firefox用 */
+  -o-transition: 0.3s; /* Opera用 */
 }
 
 input[type="submit"]:hover {
-  background-color: #2DC2BC;
+  /*background-color: #DC750F;*/
   cursor: pointer;
+  box-shadow:  1px 1px 12px rgba(0,0,0,.16);
 }
 
 header {
@@ -539,11 +512,11 @@ header > p:after {
   bottom: 18px;
   right: 30px;
   display: inline-block;
-  color: #30C8D6;
+  color: #F4810E;
 }
 
 .list a:hover {
-  color: #21BBC9;
+  color: #DC750F;
 }
 
 .list-admin {
@@ -602,17 +575,17 @@ header > p:after {
 }
 
 main {
-  max-width: 700px;
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
-  padding: 80px 0 100px;
+  padding: 80px 32px 100px;
 }
 
 .sign {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .sign > .container {
@@ -634,7 +607,7 @@ main {
 }
 
 .sign > .container > p > a:hover {
-  color: #2DC2BC;
+  color: #F4810E;
 }
 
 .sign > .container form {
@@ -643,7 +616,7 @@ main {
 
 .sign .panel {
   padding: 60px 80px 40px;
-  background-color: #F6FAFF;
+  background-color: #ffffff;
 }
 
 .sign h1 {
@@ -682,6 +655,10 @@ main {
 }
 
 .sign input[name="email"] {
+  margin-bottom: 30px;
+}
+
+.sign input[name="unit_price"] {
   margin-bottom: 30px;
 }
 
@@ -771,26 +748,26 @@ input[type="submit"].btn-confirm:hover {
 }
 
 input[type="submit"].btn-confirm.sub {
-  background-color: #B7C7DF;
+  background-color: #DC750F;
 }
 
 input[type="submit"].btn-confirm.sub:hover {
-  background-color: #A9B9D2;
+  background-color: #DC750F;
 }
 
 /* user.ejs tab */
 
 .area {
-  width: 500px;
+  width: 100%;
   margin: auto;
   flex-wrap: wrap;
   display: flex;
 }
  
 .tab_class {
-  width: calc(100%/5);
+  width: 50%;
   height: 50px;
-  background-color: darkgrey;
+  background-color: #FFF9E2;
   line-height: 50px;
   font-size: 15px;
   text-align: center;
@@ -798,22 +775,115 @@ input[type="submit"].btn-confirm.sub:hover {
   float: left;
   order: -1;
 }
+
+.top-wrap{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
  
 input[name="tab_name"] {
   display: none;
 }
  
 input:checked + .tab_class {
-  background-color: cadetblue;
-  color: aliceblue;
+  background-color: #fff;
+  color: #212121;
+  border-radius: 20px 20px 0px 0px;
+  position: relative;
+  z-index: 2;
 }
  
 .content_class {
   display: none;
   width: 100%;
+  padding: 40px 32px;
+  background-color: #fff;
+  border-radius: 0px 0px 20px 20px;
 }
  
 input:checked + .tab_class + .content_class {
   display: block;
+  box-shadow:  1px 8px 12px rgba(0,0,0,.16);
 }
 
+.sal-sum{
+  display: flex;
+  margin-bottom: 32px;
+}
+
+.sale{
+  width:100%;
+}
+
+.time{
+  width:100%;
+}
+
+/* user.ejs tab */
+
+/* top.ejs */
+.time-wrap{
+  width:400px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding:20px 20px 12px;
+  background-color: #fff;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 40px;
+}
+
+.now-date{
+  font-size: 16px;
+}
+
+.now-time{
+  font-size:32px;
+}
+
+.top-section{
+  width:100%;
+  padding: 60px 0;
+}
+
+input[type=radio]{
+  display: none; /* ラジオボタン非表示 */
+}
+
+.label{
+  padding:20px 40px;
+  background:#fff;
+  border: 1px solid #F4810E;
+  border-radius: 5px;
+  opacity: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  font-size: 24px;
+}
+
+input[type="radio"]:checked + .label  {
+  background:#F4810E;
+  color: #fff;
+  border: 1px solid #F4810E;
+  border-radius: 5px;
+  padding:20px 40px;
+  opacity: 100%;
+  width: 100%;
+}
+
+.inout-btn-wrap{
+  width:100%;
+}
+
+.radio-wrapper{
+  display: flex;
+  gap: 20px;
+
+}
