--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,6 +12,7 @@
       <div class="container">
         <div class="panel">
           <h2>従業員登録</h2>
+          <p class="noti-text">メールアドレス・パスワードは必ず保存してください</p>
           <% if (errors.length > 0) { %>
             <ul class="errors">
               <!-- forEachメソッドを用いて、エラーメッセージ表示 -->
@@ -24,7 +25,9 @@
             <p>ユーザー名</p>
             <input type="text" name="username">
             <p>メールアドレス</p>
-            <input type="text" name="email">
+            <input type="email" name="email">
+            <p>時給</p>
+            <input type="number" name="unit_price">
             <p>パスワード</p>
             <input type="password" name="password">
             <input type="submit" value="登録する">
