--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,16 @@
       <div class="container">
         <div class="panel">
           <h2>ログイン</h2>
+          <div class="notes">
+            <h3>採用担当者さまへ</h3>
+            <p class="notes-txt">下記がログイン情報となります。</p>
+            <p class="notes-txt">■管理者アカウント</p>
+            <p class="notes-txt">EMAIL : manager@gmail.com</p>
+            <p class="notes-txt">PASS : manager</p>
+            <p class="notes-txt">■従業員アカウント</p>
+            <p class="notes-txt">EMAIL : test@gmail.com</p>
+            <p class="notes-txt">PASS : testtest</p>
+          </div>
           <form action="/login" method="post">
             <p>メールアドレス</p>
             <!-- メールアドレスの入力欄を作成してください -->
