--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,11 @@
 <header>
     <div class="header-nav">
-      <a href="/"><img class="logo-image" src="/images/Logo_200_50_White.png" alt="ポイントUP勤怠ロゴ"></a>
+      <% if(locals.isLoggedIn) {%>
+        <a href="/top"><img class="logo-image" src="/images/Logo_200_50_White.png" alt="ポイントUP勤怠ロゴ"></a>
+      <% }else{%>
+        <a href="/"><img class="logo-image" src="/images/Logo_200_50_White.png" alt="ポイントUP勤怠ロゴ"></a>
+      <% }%>
+      
       <p>ようこそ、<%= locals.userName %>さん</p>
       <ul>
         <% if(locals.isLoggedIn) {%>
