--- a/views/user.ejs
+++ b/views/user.ejs
@@ -66,13 +66,13 @@
                                             timeZone: 'Asia/Tokyo'
                                           }; %>
                                         <!-- In＿timeが格納されているか -->
-                                        <% if(history.In_time !== null){ %>
+                                        <% if(history.In_time !== null && !isNaN(new Date(history.In_time))){ %>
                                             <td><%= new Intl.DateTimeFormat('ja-JP', timeoptions).format(new Date(history.In_time)).replace(/\//g, '-').replace(',',''); %></td>
                                         <% } else { %>
                                             <td></td>
                                         <% } %>
                                         <!-- Out＿timeが格納されているか -->
-                                        <% if(history.Out_time !== null){ %>
+                                        <% if(history.Out_time !== null && !isNaN(new Date(history.Out_time))){ %>
                                             <td><%= new Intl.DateTimeFormat('ja-JP', timeoptions).format(new Date(history.Out_time)).replace(/\//g, '-').replace(',',''); %></td>
                                         <% } else { %>
                                             <td></td>
