--- a/public/css/style.css
+++ b/public/css/style.css
@@ -899,3 +899,111 @@ input[type="radio"]:checked + .label  {
   gap: 20px;
 
 }
+
+/* シフト管理 */
+.modal {
+  display: none;
+  flex-direction: column !important;
+  align-items: center !important;
+  padding: 1em;
+  max-width: 350px;
+  height:auto !important;
+  position: relative;
+  background-color: #fff;
+  border: 3px solid #f0f0f0;
+  border-radius: 4px;
+
+  }
+  
+  .modal__title {
+  margin-bottom: .5em;
+  align-self: flex-start;
+  }
+  
+  .modal__title input[type="text"] {
+  width: 100px;
+  }
+  
+  .modal__title label {
+  display: flex;
+  align-items: center;
+  }
+  
+  .modal__color {
+  margin-bottom: .5em;
+  align-self: flex-start;
+  }
+  
+  .modal__times {
+  margin-bottom: 2em;
+  }
+  
+  .modal__times > * {
+  margin-bottom: .5em;
+  }
+  
+  .modal__times > *:last-child {
+  margin-bottom: 0;
+  }
+  
+  .modal__times label {
+  display: flex;
+  align-items: center;
+  }
+  
+  .modal-action-buttons__button {
+  border: 2px solid #000;
+  padding: .5em 1em;
+  border-radius: 4px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .25s;
+  }
+  
+  .modal-action-buttons__button:hover {
+  color: #fff;
+  }
+  
+  .save {
+  color: #2c75ff;
+  border-color: #2c75ff;
+  }
+  
+  .save:hover {
+  color: #fff;
+  background-color: #2c75ff;
+  }
+  
+  .delete {
+  color: #dd1155;
+  border-color: #dd1155;
+  }
+  
+  .delete:hover {
+  color: #fff;
+  background-color: #dd1155;
+  }
+  
+  .close {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  z-index: 9001;
+  top: 20px;
+  right: 20px;
+  transform: translate(50%, -50%);
+  transition: .15s;
+  }
+  
+  .close:hover {
+  opacity: .85;
+  background-color: transparent;
+  }
+  
+  input[type="date"] {
+  padding: .5em 1em;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-weight: bold;
+  }
